<resources>
    <string name="app_name">EdtRedondeados</string>
    <string name="hello">Hello!</string>
    <string name="sign_in_into_your_account">Sign in into your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_your_account">Create your account</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account">Already have account?</string>
</resources>