<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp"
    android:weightSum="3"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"


        >
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_iniciar_sesion"
            android:layout_gravity="center_horizontal"

            app:tint="@color/colorPrimary"
            android:contentDescription="@string/app_name" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/create_your_account"

            />

        <EditText
            android:id="@+id/edtLoginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_rounded_background"


            android:hint="@string/username"
            android:padding="10dp"
            android:textCursorDrawable="@drawable/color_cursor" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_rounded_background"

            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textCursorDrawable="@drawable/color_cursor"

            />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_rounded_background"

            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textCursorDrawable="@drawable/color_cursor"

            />


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="30dp"
        android:gravity="center|top"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:background="@drawable/button_rounded_background_fill"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="10dp"
            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"

            />


    </LinearLayout>



</LinearLayout>